--- a/TechLabApp/app/src/main/res/layout/activity_login.xml
+++ b/TechLabApp/app/src/main/res/layout/activity_login.xml
@@ -24,8 +24,9 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
-        android:layout_height="316dp"
+        android:layout_height="325dp"
         android:background="#cc0033"
+        android:contentDescription="@string/picture_desc"
         app:srcCompat="@drawable/logohr" />
 
     <ScrollView
