--- a/MainMenu/app/src/main/res/layout/activity_main.xml
+++ b/MainMenu/app/src/main/res/layout/activity_main.xml
@@ -12,91 +12,92 @@
         android:id="@+id/hrlogo"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription="@string/Logo_Desc"
         android:src="@drawable/logohr2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.425"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0" />
 
     <Button
         android:id="@+id/inventory_btn"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.7"
         android:layout_height="60dp"
-        android:text="View Inventory"
+        android:text="@string/Inventory_Button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.45"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintVertical_bias="0.45"
+        app:layout_constraintWidth_percent="0.7" />
 
     <Button
         android:id="@+id/usr_reserve_btn"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.7"
         android:layout_height="60dp"
-        android:text="Reserve Item"
+        android:text="@string/Reserve_Button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.55"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintVertical_bias="0.55"
+        app:layout_constraintWidth_percent="0.7" />
 
     <Button
         android:id="@+id/usr_items_btn"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.7"
         android:layout_height="60dp"
-        android:text="My Items"
+        android:text="@string/My_Items_Button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.65"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintVertical_bias="0.65"
+        app:layout_constraintWidth_percent="0.7" />
 
     <Button
         android:id="@+id/tos_btn"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.35"
         android:layout_height="60dp"
-        android:text="Terms of Service"
+        android:text="@string/ToS_Button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.225"
-        app:layout_constraintVertical_bias="0.75"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintVertical_bias="0.75"
+        app:layout_constraintWidth_percent="0.35" />
 
     <Button
         android:id="@+id/usr_settings_btn"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.35"
         android:layout_height="60dp"
-        android:text="Account Settings"
+        android:text="@string/Profile_Button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.775"
-        app:layout_constraintVertical_bias="0.75"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintVertical_bias="0.75"
+        app:layout_constraintWidth_percent="0.35" />
 
     <Button
         android:id="@+id/logout_btn"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.5"
         android:layout_height="60dp"
-        android:text="Log Out"
+        android:text="@string/Log_Out_Button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.9"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintWidth_percent="0.5" />
 
 </android.support.constraint.ConstraintLayout>
