--- a/TechLabApp/app/src/main/res/layout/signup.xml
+++ b/TechLabApp/app/src/main/res/layout/signup.xml
@@ -37,7 +37,7 @@
         android:id="@+id/stdnr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Student Number"
+        android:text="@string/"
         android:textSize="36sp"
         android:textStyle="bold" />
 
