--- a/TechLabApp/app/src/main/res/layout/signup.xml
+++ b/TechLabApp/app/src/main/res/layout/signup.xml
@@ -27,7 +27,7 @@
         android:textSize="36sp"
         android:textStyle="bold" />
 
-    <TextView
+    <EditText
         android:id="@+id/HRemail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
