--- a/MainMenu/app/src/main/res/layout/activity_main.xml
+++ b/MainMenu/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
     <Button
         android:id="@+id/inventory_btn"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="0dp"
         android:text="@string/Inventory_Button"
         android:background="@color/White"
         android:textColor="@color/Black"
@@ -35,12 +35,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.45"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintWidth_percent="0.7" />
 
     <Button
         android:id="@+id/usr_reserve_btn"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="0dp"
         android:text="@string/Reserve_Button"
         android:background="@color/White"
         android:textColor="@color/Black"
@@ -50,12 +51,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.55"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintWidth_percent="0.7" />
 
     <Button
         android:id="@+id/usr_items_btn"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="0dp"
         android:text="@string/My_Items_Button"
         android:background="@color/White"
         android:textColor="@color/Black"
@@ -65,12 +67,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.65"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintWidth_percent="0.7" />
 
     <Button
         android:id="@+id/tos_btn"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="0dp"
         android:text="@string/ToS_Button"
         android:background="@color/White"
         android:textColor="@color/Black"
@@ -80,12 +83,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.75"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintWidth_percent="0.34" />
 
     <Button
         android:id="@+id/usr_settings_btn"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="0dp"
         android:text="@string/Profile_Button"
         android:background="@color/White"
         android:textColor="@color/Black"
@@ -95,12 +99,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.75"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintWidth_percent="0.34" />
 
     <Button
         android:id="@+id/logout_btn"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="0dp"
         android:text="@string/Log_Out_Button"
         android:background="@color/White"
         android:textColor="@color/Black"
@@ -110,6 +115,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintWidth_percent="0.5" />
 
 </android.support.constraint.ConstraintLayout>
