--- a/MainMenu/app/src/main/res/layout/product_create.xml
+++ b/MainMenu/app/src/main/res/layout/product_create.xml
@@ -104,16 +104,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/productName"
+        app:layout_constraintTop_toBottomOf="@+id/productAmount"
         app:layout_constraintVertical_bias="0.168" />
 
     <ImageView
-        android:id="@android:id/icon"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/productImage"
+        android:layout_width="171dp"
+        android:layout_height="117dp"
         android:layout_weight="1"
-        android:onClick="selectImage"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
