--- a/MainMenu/app/src/main/res/layout/tos.xml
+++ b/MainMenu/app/src/main/res/layout/tos.xml
@@ -40,6 +40,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="#ffffff"
+            android:fadeScrollbars="false"
             app:layout_constraintHeight_percent="0.85"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintVertical_bias="1"
