--- a/MainMenu/app/src/main/res/layout/login_activity.xml
+++ b/MainMenu/app/src/main/res/layout/login_activity.xml
@@ -59,6 +59,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/Login"
+        android:background="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
