--- a/MainMenu/app/src/main/res/layout/rowlayout.xml
+++ b/MainMenu/app/src/main/res/layout/rowlayout.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_margin="5dp"
     android:layout_height="wrap_content"
+    android:background="#ffffff"
     >
 
 
@@ -14,14 +15,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:background="#ffffff">
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
-            android:textColor="#000"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <TextView
@@ -29,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Manufacturer"
-            android:textColor="#000"
+            android:textColor="#000000"
             android:textSize="15sp" />
 
         <TextView
@@ -37,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="prodid"
-            android:textColor="#000"
+            android:textColor="#000000"
             android:textSize="15sp" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
