--- a/MainMenu/app/src/main/res/layout/account_settings.xml
+++ b/MainMenu/app/src/main/res/layout/account_settings.xml
@@ -214,7 +214,7 @@
         android:layout_height="48dp"
         android:ems="10"
         android:hint="Date Of Birth"
-        android:inputType="textPersonName"
+        android:inputType="date"
         app:layout_constraintBottom_toBottomOf="@+id/frameLayout7"
         app:layout_constraintEnd_toEndOf="@+id/frameLayout7"
         app:layout_constraintStart_toStartOf="@+id/frameLayout7"
